--- a/todo-list/src/Components/todocard.css
+++ b/todo-list/src/Components/todocard.css
@@ -1,3 +1,6 @@
+body{
+    height: 100%;
+}
 .todocard{
     width: 70%;
     margin: auto;
@@ -8,3 +11,8 @@
     align-items: center;
     border-radius: 5px;
 }
+.container {
+    display: flex;
+    flex-direction: column;  /* Stack heading and card vertically */
+    align-items: center;     /* Center items horizontally */
+  }
