--- a/todo-list/src/Components/todoitem.css
+++ b/todo-list/src/Components/todoitem.css
@@ -8,19 +8,32 @@
     border-radius: 5px;
     background-color: white;
 }
+
 .item{
     padding: 8px;
 }
-.desc{
+
+.desc, .edit-input { 
     width: 85%;
 }
+
 .strikethrough{
     color: gray;
-  text-decoration: line-through;
+    text-decoration: line-through;
 }
+
 .checked{
     opacity: 0.6;
 }
+
 .icon {
     cursor: pointer;
-  }
+}
+
+.edit-input {
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
