--- a/todo-list/src/Components/todocard.css
+++ b/todo-list/src/Components/todocard.css
@@ -4,7 +4,7 @@ body{
 .todocard{
     width: 70%;
     margin: auto;
-    background-color: rgb(236, 236, 236);
+    background-color: #e0e0e0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,4 +15,10 @@ body{
     display: flex;
     flex-direction: column;  /* Stack heading and card vertically */
     align-items: center;     /* Center items horizontally */
-  }
+}
+.heading{
+    font-size: 24px;
+    font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
